--- a/src/client/App.css
+++ b/src/client/App.css
@@ -1,10 +1,3 @@
-.App {
-  text-align: center;
-  background: url(./bg_arrows.svg) 83px top repeat #ff6b4a;
-  color: #000;
-  background-attachment: fixed;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -40,30 +33,45 @@
   }
 }
 
-a {
-  background-color: white;
+p {
+  font-size: 20px;
+  font-weight: bold;
   color: #000;
-  text-decoration: none;
-  text-transform: uppercase;
-  padding: 5px;
-  margin: 10px;
-  margin-bottom: 100px;
 }
 
+/* 
 input, textarea, select, button, label {
-  width : 300px;
+  width : 600px;
+  height: 40px;
   padding: 5px;
   margin: 10px;
   box-sizing: border-box;
   display: inline-block;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 label {
-  width: 120px;
-  font-family: Verdana, sans-serif;
-  font-size: 16px;
-  font-weight: bold;
+  width: 150px;
+ 
   color: #660000;
+} */
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  text-align: center;
+  background: url(./bg_arrows.svg) 83px top repeat #ff6b4a;
+  color: #000;
+  background-attachment: fixed;
+}
+
+.btn {
+margin: 10px;
+}
+
+.container {
+margin-top: 50px;
 }
 
 
