--- a/src/client/App.css
+++ b/src/client/App.css
@@ -3,17 +3,13 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 h1{
-  /* text-shadow: 2px 4px 3px rgba(0,0,0,0.3); */
-  color: white;
-  font-size: 50px;
-  font-weight: bold;
+  color: #721c24;
+  font-size: 100px;
+  font-weight: bold; 
+  letter-spacing: -1px; 
+  line-height: 1; 
+  text-shadow: 1px 1px 10px white;
 }
 
 .App-header {
@@ -24,36 +20,6 @@ h1{
   justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-/* 
-input, textarea, select, button, label {
-  width : 600px;
-  height: 40px;
-  padding: 5px;
-  margin: 10px;
-  box-sizing: border-box;
-  display: inline-block;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-label {
-  width: 150px;
- 
-  color: #660000;
-} */
 
 body {
   font-family: Arial, Helvetica, sans-serif;
