--- a/src/client/App.css
+++ b/src/client/App.css
@@ -20,6 +20,14 @@ h1{
   justify-content: center;
 }
 
+a {
+  color: #000;
+}
+
+a:hover{
+  color: #000;
+}
+
 
 body {
   font-family: Arial, Helvetica, sans-serif;
